tests/baselines/reference/unicodeExtendedEscapesInTemplates19(target=es6).errors.txt
unicodeExtendedEscapesInTemplates19.ts(1,13): error TS1125: Hexadecimal digit expected.


==== unicodeExtendedEscapesInTemplates19.ts (1 errors) ====
    var x = `\u{}`;
                
!!! error TS1125: Hexadecimal digit expected.
    